2023-10-30T16:12:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6695603944 # 2032
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
* notice: last 14d: unq all: 47 93
* notice: prev accum: outdated-unq outdated-all / unq all: 1826 5577 / 1897 5677
* notice: next accum: outdated-unq outdated-all / unq all: 1826 5577 / 1898 5679
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -4 -5 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-10-16 2023-10-30]

2023-10-30T08:12:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6689996230 # 2031
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
* notice: last 14d: unq all: 49 96
* notice: prev accum: outdated-unq outdated-all / unq all: 1826 5577 / 1896 5676
* notice: next accum: outdated-unq outdated-all / unq all: 1826 5577 / 1897 5677
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -4 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-16 2023-10-30]

2023-10-29T16:11:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6684440827 # 2029
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-29
* notice: last 14d: unq all: 52 99
* notice: prev accum: outdated-unq outdated-all / unq all: 1820 5569 / 1896 5675
* notice: next accum: outdated-unq outdated-all / unq all: 1826 5577 / 1896 5676
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-15] / [2023-10-29]

2023-10-29T08:11:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6682159198 # 2028