@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-30T16:12:06Z",
-  "count_outdated" : 5577,
-  "uniques_outdated" : 1826,
+  "timestamp" : "2023-10-31T00:43:40Z",
+  "count_outdated" : 5587,
+  "uniques_outdated" : 1834,
   "count" : 5679,
   "uniques" : 1898,
   "clones" : [
-    {
-      "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 10 ],
-      "count_decinc": [ 9, 10 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 8 ],
-      "uniques_decinc": [ 7, 8 ]
-    },
     {
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 16,
