@@ -1,12 +1,7 @@
 {
-  "count": 93,
+  "count": 92,
   "uniques": 47,
   "clones": [
-    {
-      "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-17T00:00:00Z",
       "count": 16,
